# aurora-frontend

./: .babelrc  .env.example  .gitignore  PR_ESCROW_CLASSES_UI.md  README-voice-features.md  README.md  assessment.md  bundlebudget.config.json  components.json  eslint.config.js  index.html  jest.config.mjs  jest.setup.js  jsconfig.json  package-lock.json  package.json  tailwind.config.js  task.md
.github/ISSUE_TEMPLATE/: issue_template.md  pull_request_template.md
.github/workflows/: build.yml  develop-production.yml  develop-staging.yml  main.yml  security.yml  test.yml
blockchain/: Makefile
blockchain/contracts/nft-contract/: .contract-id  .gitignore  Cargo.toml  Makefile  README.md
blockchain/contracts/nft-contract/src/: admin.rs  balance.rs  contract.rs  lib.rs  metadata.rs  owner.rs  storage_types.rs  test.rs  token_approval.rs  token_uri.rs
blockchain/contracts/nft-contract/src/token_utils/: event.rs  metadata.rs  mod.rs
blockchain/transactions-sdk/: README.md  package-lock.json  package.json
data/assessments/: grammar-foundations-assessments.json
docs/: API_INTEGRATION.md  CONSOLE_LOG_CLEANUP_SUMMARY.md  LOGGING_SYSTEM.md  chat.md  frontend-ci-cd.md  test-mint-fix.md  user_recognition_system.md  voice-features.md
docs/assessments/: grammar-foundations-assessments.md
src/: App.css  App.jsx  App.jsx.bak  index.css  main.jsx
src/components/: IdiomChallenge.jsx  TestimonialsPage.jsx
src/context/: AuthContext.jsx  ToastContext.jsx  WalletContext.jsx
src/data/: business-english-mock-date.js  conversation-assessments.js  cultural-assessments.js  (+5 more)
(+336 files in other folders)
