[package]
name = "nft-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.7" }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"] 